<?xml version="1.0"?>
<package>
  <name>udacity_launch</name>
  <version>1.0.0</version>
  <description>The udacity_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jit@getauro.com">Jit Ray Chowdhury</maintainer>
  <license>MIT</license>
  <url type="website">https://www.udacity.com/self-driving-car</url>
  <url type="website">http://getauro.com</url>
  <url type="repository">https://github.com/jitrc/udacity-sdc</url>
  <author email="jit@getauro.com">Jit Ray Chowdhury</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
